# CppBasicTechnique

./: .gitignore  CMakeLists.txt  README.md
c-pointer/: CMakeLists.txt  main_pointer.cpp
heap_ndim_array/: CMakeLists.txt  main_heap_ndim_array.cpp  read_line.cpp  read_line.hpp  sample.txt
iterator/: CMakeLists.txt  iterator.hpp  main_iterator.cpp
ndim_array/: CMakeLists.txt  main_ndim_array.cpp
orient_object/: CMakeLists.txt  main_struct.cpp  struct.cpp  struct.hpp
